--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -209,6 +209,68 @@ padding: 1rem;
     margin: 10px;
 }
 
+/* services Section */
+.services {
+    box-shadow: 0px 0 10px var(--primary-shadow);
+    color: var(--primary-text);
+    background-color: var(--secondary-bg-color);
+    padding: 32px 0;
+    margin-top: 2rem;
+}
+
+.services h2 {
+    text-decoration: underline;
+}
+
+.service-pic {
+    width: 65%;
+    height: 60%;
+    border-radius: 50%;
+}
+
+.service-pic:hover {
+    width: 70%;
+    height: 65%;
+    transition: var(--transition);
+}
+
+.services-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.services-title {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.service-container {
+text-align: center;
+width: 21.875rem;
+padding: 1rem;
+}
+
+.service-container p {
+    padding: 0.2rem;
+}
+
+.service-title {
+    margin-bottom: var(--bottom-margin);
+}
+
+.service-details {
+    margin-bottom: var(--bottom-margin);
+}
+
+.service-card {
+    background-color: var(--primary-bg-color);
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--primary-shadow);
+    padding: 20px;
+    margin: 10px;
+}
+
 /* Contact */
 .contact {
     margin-top: 2rem;
@@ -249,6 +311,20 @@ padding: 1rem;
     padding-bottom: 10px;
     border-radius: 5px;
     border: none;
+    border: 2px outset var(--secondary-color);
+    font-size: 0.875rem;
+    outline: none;
+    color: var(--primary-text);
+    background-color: var(--secondary-bg-color);
+}
+
+.contact-form-container select {
+    padding: 0.25rem;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    /* border: none; */
     border: 2px outset var(--secondary-color);
     font-size: 0.875rem;
     outline: none;
