--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,8 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 /* Variables */
 :root {
-    --font-family: "Roboto", sans-serf;
+    --font-family: "Montserrat", sans-serf;
     --normal-font: 400;
     --bold-font: 700;
     --bolder-font: 900;
